--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: List directory
+      run: ls -la
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '18'
 
-    - name: Install dependencies
-      run: npm install
+    - name: Check node version
+      run: |
+        node --version
