--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Check current directory
       run: pwd
@@ -19,7 +19,7 @@ jobs:
       run: ls -la
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
         node-version: '18'
 
@@ -28,7 +28,7 @@ jobs:
         node --version
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8'
 
@@ -37,9 +37,11 @@ jobs:
         python --version
 
     - name: Set up Java
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        distribution: 'temurin'
+        java-version: '21'
+        cache: 'maven'
 
     - name: Check Java version
       run: |
