--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,10 @@ jobs:
 
     - name: Create new file
       run: |
-        ls -la
+        touch newfile.txt
+
+    - name: List directory again
+      run: ls -la
 
     # - name: Set up Java
     #   uses: actions/setup-java@v4
