--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,4 +51,11 @@ jobs:
       run: |
         echo ${{ env.version }}
 
+    # - name: Deploy to AWS S3
+    #   if: success()
+    #   run: |
+    #     aws s3 sync . s3://your-bucket-name --delete --exclude ".git/*" --exclude ".github/*"
+    #   env:
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
