--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,30 +32,11 @@ jobs:
       with:
         python-version: '3.8'
 
-    - name: Check Python version
+    - name: Deploy to AWS S3
+      if: success()
       run: |
-        python --version
-
-    - name: Create new file
-      run: |
-        touch newfile.txt
-
-    - name: List directory again
-      run: ls -la
-
-    - name: Show secret value
-      run: |
-        echo ${{ secrets.version }}
-
-    - name: Show env value
-      run: |
-        echo ${{ env.version }}
-
-    # - name: Deploy to AWS S3
-    #   if: success()
-    #   run: |
-    #     aws s3 sync . s3://your-bucket-name --delete --exclude ".git/*" --exclude ".github/*"
-    #   env:
-    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws s3 sync . s3://tpmydeployment --delete --exclude ".git/*" --exclude ".github/*"
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
