--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         sudo apt-get install -y python3-pip
         sudo pip3 install awscli
 
-    - name: Deploy to AWS S3 tpmydeployment
+    - name: Deploy to AWS S3 - tpmydeployment
       if: success()
       run: |
         ls -la
