--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,15 @@ jobs:
         sudo apt-get install -y python3-pip
         sudo pip3 install awscli
 
+    - name: Check if bucket exists
+      run: |
+        if aws s3api head-bucket --bucket ${{ env.AWS_BUCKET_NAME }}; then
+          echo "Bucket exists."
+        else
+          echo "Bucket does not exist. Stopping the pipeline."
+          exit 1
+        fi
+        
     - name: Deploy to AWS S3 - tpmydeployment
       if: success()
       run: |
@@ -26,4 +35,5 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
 
