--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,14 @@ jobs:
 
     - name: Check if bucket exists
       run: |
+        aws --version
         if aws s3api head-bucket --bucket ${{ env.AWS_BUCKET_NAME }}; then
           echo "Bucket exists."
         else
           echo "Bucket does not exist. Stopping the pipeline."
           exit 1
         fi
-        
+
     - name: Deploy to AWS S3 - tpmydeployment
       if: success()
       run: |
