--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
         sudo apt-get install -y python3-pip
         sudo pip3 install awscli
 
-    - name: Check if bucket exists
+    - name: Check if bucket exists v2
       run: |
         aws --version
-        if aws s3api head-bucket --bucket ${{ env.AWS_BUCKET_NAME }}; then
+        if aws s3api head-bucket --bucket tpmydeployment; then
           echo "Bucket exists."
         else
           echo "Bucket does not exist. Stopping the pipeline."
