--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Check if bucket exists v2
       run: |
         aws --version
+        aws s3api head-bucket --bucket tpmydeployment
         if aws s3api head-bucket --bucket tpmydeployment; then
           echo "Bucket exists."
         else
