--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,13 @@ jobs:
         sudo apt-get install -y python3-pip
         sudo pip3 install awscli
 
+    - name: Configure AWS credentials
+      run: |
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set region eu-west-3
+
+
     - name: Check if bucket exists v2
       run: |
         aws --version
@@ -34,8 +41,8 @@ jobs:
       run: |
         ls -la
         aws s3 sync . s3://tpmydeployment --delete --exclude ".git/*" --exclude ".github/*"
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+      # env:
+      #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
 
