--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         aws --version
         aws s3api head-bucket --bucket tpmydeployment
-        if aws s3api head-bucket --bucket tpmydeployment; then
+        if aws s3api head-bucket --bucket tpmydeploymenttt; then
           echo "Bucket exists."
         else
           echo "Bucket does not exist. Stopping the pipeline."
