--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
         aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws configure set region eu-west-3
 
-
     - name: Check if bucket exists v2
       run: |
         aws --version
+        echo ${{ env.AWS_BUCKET_NAME }}
         if aws s3api head-bucket --bucket ${{ env.AWS_BUCKET_NAME }}; then
           echo "Bucket exists."
         else
