--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,16 @@ jobs:
           echo "Bucket does not exist. Stopping the pipeline."
           exit 1
         fi
+      env:
+        AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
 
     - name: Deploy to AWS S3 - tpmydeployment
       if: success()
       run: |
         ls -la
         aws s3 sync . s3://${{ env.AWS_BUCKET_NAME }} --delete --exclude ".git/*" --exclude ".github/*"
-      # env:
-      #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #   AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+      env:
+        AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
