--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,10 @@ jobs:
     - name: Check if bucket exists v2
       run: |
         aws --version
-        echo $AWS_BUCKET_NAME
-        echo "------"
+        echo "$AWS_BUCKET_NAME"
+        echo "1------"
+        echo "${{ env.AWS_BUCKET_NAME }}"
+        echo "2------"
         if aws s3api head-bucket --bucket $AWS_BUCKET_NAME; then
           echo "Bucket exists."
         else
