--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
         echo "1------"
         echo "${{ env.AWS_BUCKET_NAME }}"
         echo "2------"
+        echo ${{ env.AWS_BUCKET_NAME }}
+        echo ${{ secrets.AWS_BUCKET_NAME }}
+        echo "3------"
         if aws s3api head-bucket --bucket $AWS_BUCKET_NAME; then
           echo "Bucket exists."
         else
@@ -39,6 +42,8 @@ jobs:
         fi
       env:
         AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Deploy to AWS S3 - tpmydeployment
       if: success()
@@ -47,6 +52,6 @@ jobs:
         aws s3 sync . s3://${{ env.AWS_BUCKET_NAME }} --delete --exclude ".git/*" --exclude ".github/*"
       env:
         AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
-        # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
