--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,14 @@ jobs:
         echo "#-"
         echo ${{ secrets.AWS_BUCKET_NAME }}
         echo "3------"
-        if aws s3api head-bucket --bucket $AWS_BUCKET_NAME; then
+        if aws s3api head-bucket --bucket ${{ secrets.AWS_BUCKET_NAME }}; then
           echo "Bucket exists."
         else
           echo "Bucket does not exist. Stopping the pipeline."
           exit 1
         fi
       env:
-        AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -50,9 +50,9 @@ jobs:
       if: success()
       run: |
         ls -la
-        aws s3 sync . s3://${{ env.AWS_BUCKET_NAME }} --delete --exclude ".git/*" --exclude ".github/*"
+        aws s3 sync . s3://${{ secrets.AWS_BUCKET_NAME }} --delete --exclude ".git/*" --exclude ".github/*"
       env:
-        AWS_BUCKET_NAME: ${{ env.AWS_BUCKET_NAME }}
+        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
